--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script src="index.js" defer></script>
+    <link rel="shortcut icon" href="./js-logo.ico">
     <title>Carrinho de compras</title>
 </head>
+
 <body>
-    <script src="index.js"></script>
 </body>
+
 </html>
